<resources>
    <string name="app_name">MedManager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="categorize">Categorize</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="notifications">Notify me</string>
    <string name="faqs">FAQs</string>
    <string name="contact_me">Contact us</string>
    <string name="medications">Medications</string>
    <string name="search">Search</string>
    <string name="title_activity_new_medication">NewMedicationActivity</string>
    <string name="new_medication">New Medication</string>
    <string name="monthly_category">Monthly Category</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="categories">Categories</string>
    <string name="medication_name">Medication Name</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="basic_information">Basic Information</string>
    <string name="medication_duration">Medication Duration</string>
    <string name="medication_intake_time">Medication Interval</string>
    <string name="intake_value">intake value</string>
    <string name="enter_number">Enter Number (#)</string>
    <string name="delete">Delete</string>
    <string name="start_time">Start Time</string>
    <string-array name="array_frequency_or_interval">
        <item>Frequency(# times a day)</item>
        <item>Interval(Every # hours)</item>
    </string-array>
    <string name="title_activity_single_medication">SingleMedicationActivity</string>
    <string name="medication">Medication</string>
    <string name="edit">Edit</string>
    <string name="frequency">Frequency(# times a day)</string>
    <string name="interval">Interval(Every # hours)</string>
    <string name="title_activity_edit_medication">EditMedicationActivity</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_calendar_specific_medication">CalendarSpecificMedicationActivity
    </string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="call">call</string>
    <string name="mail">mail</string>
    <string name="github">Github</string>
    <string name="phone">phone</string>
    <string name="_234_703_361_0860">+234 703 361 0860</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="slack">Slack</string>
    <string name="nenneadora">NenneAdora</string>
    <string name="title_activity_faq">FAQActivity</string>
    <string name="what_is_medmanager">What is MedManager?</string>
    <string name="med_manager_description">Med-Manager is a simple app that helps patients remember to take their medication and provides tracking for the intake of the prescribed medication</string>
    <string name="how_to_use">How do I use this app?</string>
    <string name="how_to_use_desc">You can start by uploading your medication information to the app. Sit back and relax, you will be notified when its time to take your medications</string>
    <string name="should_i_uninstall">Do I have to uninstall the app if I don\'t want reminders?</string>
    <string name="you_can_turn_off_notifications">No. You can turn off notifications. You can still have the application and store all your details for your perusal.</string>
    <string name="linkedin">LinkedIn</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="no_meds_yet">You have no medications yet. Hit the + button at the top of the screen to start adding medications</string>
    <string name="no_categories_yet">There are no categories yet. Add medications to see categories.</string>
    <string name="title_activity_single_category">SingleCategoryActivity</string>
    <string name="mo_meds_yet_short">No Medications Yet</string>
    <string name="change_email">Change Email</string>
    <string name="logout">Logout</string>
    <string name="delete_my_account">Delete My Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">MedManager.</string>
    <string name="slogan">Never miss your medications ever again</string>
    <string name="telephone_number">tel:+2347033610860</string>
    <string name="email_address">mailto:nennenwodo@gmail.com</string>
    <string name="proceed">PROCEED</string>
    <string name="next">NEXT</string>
    <string name="personal">Personal</string>
    <string name="todays_medications">Todays Medications</string>
    <string name="update">Update</string>
    <string name="title_activity_todays_medication">TodaysMedicationActivity</string>
    <string name="you_have_no_medications_today">You have no medications today</string>
    <string name="basic_details">Basic Details</string>
    <string name="todays_schedule">Todays Schedule</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed!</string>
    <string name="frequency_or_interval">Medication should be taken # times in a day. Please specify number that gives a perfect timely interval. e.g. 3 times a day would give a perfect timely interval of 8 hours</string>
    <string name="get_started">Get Started</string>
    <string name="screen_four_desc">Sign in and start tracking your medications. Its easy!</string>
    <string name="screen_one_desc">All your medications in one place, easily searchable</string>
    <string name="manage_your_medications">Manage Your Medications</string>
    <string name="screen_three_desc">Keep track of your monthly medication intake.</string>
    <string name="monthly_tracking">Monthly Tracking</string>
    <string name="screen_two_desc">Never miss your medications. Be reminded when it is time to take medications</string>
    <string name="get_reminders">Get Reminders</string>

</resources>
