<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/medications" />

    <!--<item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@stric_searcharch" />-->

    <!--<item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@stric_add/add" />-->

    <item
        android:id="@+id/navigation_categorize"
        android:icon="@drawable/ic_today_black_24dp"
        android:title="@string/categories" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/personal" />

</menu>
