<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.developer.nennenwodo.medmanager.profile.ProfileActivity"
    tools:showIn="@layout/activity_edit_profile"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageview_user_profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_default_profile_image"
            android:layout_centerInParent="true"
        />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/textview_label_width"
            android:layout_height="@dimen/edit_profile_field_height"
            android:text="@string/name"
            />
        <EditText
            android:id="@+id/edit_text_name"
            android:focusable="false"
            android:longClickable="false"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_profile_field_height"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/textview_label_width"
            android:layout_height="@dimen/edit_profile_field_height"
            android:text="@string/username"
            />
        <EditText
            android:id="@+id/edit_text_user_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_profile_field_height"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/textview_label_width"
            android:layout_height="@dimen/edit_profile_field_height"
            android:text="@string/email"
            />
        <EditText
            android:id="@+id/edit_text_email"
            android:focusable="false"
            android:longClickable="false"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_profile_field_height"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/textview_label_width"
            android:layout_height="@dimen/edit_profile_field_height"
            android:text="@string/gender"
            />
        <EditText
            android:id="@+id/edit_text_gender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_profile_field_height"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/textview_label_width"
            android:layout_height="@dimen/edit_profile_field_height"
            android:text="@string/birthday"
            />
        <EditText
            android:id="@+id/edit_text_birthday"
            android:focusable="false"
            android:longClickable="false"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_profile_field_height"
            />
    </LinearLayout>


    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_gradient"
        android:textColor="@android:color/white"
        android:text="@string/save"
        android:textSize="13sp"
        android:textStyle="bold"/>


</LinearLayout>
