<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
android:name="com.developer.nennenwodo.medmanager.EditMedicationActivity"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_marginTop="@dimen/activity_top_margin"
android:background="@color/colorLightGray"
tools:layout="@layout/activity_new_medication">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    >



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_section_margin"
            android:layout_marginBottom="@dimen/form_section_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:textSize="15sp"
            android:textColor="@color/colorHeadingOne"
            android:textStyle="bold"
            android:text="@string/basic_information"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_medication_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_input_padding"
                >

                <EditText
                    android:id="@+id/edit_text_medication_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:hint="@string/name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_medication_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_input_padding"
                >

                <EditText
                    android:id="@+id/edit_text_medication_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:maxLength="255"
                    android:maxLines="20"
                    android:hint="@string/description" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>




    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="@dimen/form_section_margin"
            android:layout_marginBottom="@dimen/form_section_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:textSize="15sp"
            android:textColor="@color/colorHeadingTwo"
            android:textStyle="bold"
            android:text="@string/medication_duration"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_marginTop="24dp"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_medication_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_input_padding"
                >

                <EditText
                    android:id="@+id/edit_text_medication_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:inputType="date"
                    android:focusable="false"
                    android:maxLines="1"
                    android:hint="@string/start_date" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_medication_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_input_padding"
                >

                <EditText
                    android:id="@+id/edit_text_medication_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:inputType="date"
                    android:focusable="false"
                    android:maxLines="1"
                    android:hint="@string/start_time" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_medication_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_input_padding"
                >

                <EditText
                    android:id="@+id/edit_text_medication_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:inputType="date"
                    android:focusable="false"
                    android:maxLines="1"
                    android:hint="@string/end_date" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="@dimen/form_section_margin"
            android:layout_marginBottom="@dimen/form_section_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:textSize="15sp"
            android:textColor="@color/colorHeadingThree"
            android:textStyle="bold"
            android:text="@string/medication_intake_time"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_input_padding"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/frequency_or_interval"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_medication_intake_frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_input_padding"
                >

                <EditText
                    android:id="@+id/edit_text_medication_intake_frequency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:hint="@string/enter_number" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnEditMedication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_input_padding"
        android:background="@drawable/btn_gradient"
        android:textColor="@android:color/white"
        android:text="@string/update"
        android:textSize="18sp"
        android:textStyle="bold"/>




</LinearLayout>
</ScrollView>

